refact: 일기목록 디자인 개선

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,15 +17,19 @@
         android:id="@+id/bottomNavigation"
         style="@style/BottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="72dp"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:background="@color/background"
+        android:background="@drawable/background_bottom_navigation"
+        android:paddingHorizontal="12dp"
         app:elevation="0dp"
-        app:itemIconSize="18dp"
+        app:itemHorizontalTranslationEnabled="true"
+        app:itemIconSize="20dp"
         app:itemIconTint="@drawable/item_color"
+        app:itemPaddingBottom="20dp"
+        app:itemPaddingTop="12dp"
+        app:itemRippleColor="@color/background"
         app:itemTextColor="@drawable/item_color"
-        app:labelVisibilityMode="unlabeled"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_bottom" />
-
 </RelativeLayout>
