--- a/app/src/main/res/layout/dialog_caution_backup.xml
+++ b/app/src/main/res/layout/dialog_caution_backup.xml
@@ -12,71 +12,100 @@
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:text="일기 수정"
+            android:text="일기 백업"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/cancelButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@drawable/circle_view"
-            android:padding="7dp"
+            android:padding="5dp"
             android:scaleType="centerInside"
             android:src="@drawable/x_icon" />
 
     </RelativeLayout>
 
+    <ImageView
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:src="@drawable/ic_caution"
+        app:tint="@color/pastel_700" />
+
     <TextView
-        android:id="@+id/deleteTextView"
+        android:id="@+id/questionTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="25dp"
-        android:text="일기를 삭제 또는 수정하시겠습니까?"
+        android:text="백업하시겠습니까?"
+        android:textColor="@color/font"
         android:textSize="18sp"
-        android:textColor="@color/font" />
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/subTextView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
+        android:gravity="center"
+        android:text="작성한 일기를 구글 드라이브에 저장합니다."
+        android:textColor="@color/font_contents"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/subTextView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="(단, 사진은 백업이 불가능합니다.)"
+        android:textColor="@color/pastel_700"
+        android:textSize="12sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp">
+        android:orientation="horizontal"
+        android:paddingVertical="15dp">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/deleteButton"
-            android:layout_width="75dp"
+            android:id="@+id/cancelButton2"
+            android:layout_width="wrap_content"
             android:layout_height="37dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="30dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/button"
-            android:text="삭제"
-            android:textStyle="bold"
+            android:text="취소"
             android:textColor="@color/white"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/updateButton"
-            android:layout_width="75dp"
+            android:id="@+id/okButton"
+            android:layout_width="wrap_content"
             android:layout_height="37dp"
             android:layout_gravity="center"
             android:background="@drawable/button"
-            android:text="수정"
-            android:textStyle="bold"
+            android:text="백업하기"
             android:textColor="@color/white"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
