--- a/app/src/main/res/layout/dialog_caution_password.xml
+++ b/app/src/main/res/layout/dialog_caution_password.xml
@@ -23,37 +23,33 @@
 
         <ImageButton
             android:id="@+id/cancelButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@drawable/circle_view"
-            android:paddingLeft="7dp"
-            android:paddingTop="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="7dp"
+            android:padding="5dp"
             android:scaleType="centerInside"
             android:src="@drawable/x_icon" />
-
     </RelativeLayout>
 
     <TextView
         android:id="@+id/deleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="25dp"
-        android:text="비밀번호 분실 시 앱을 삭제하고 재설치 해야하며,\n 재설치 시 기존 일기 내용은 삭제되므로\n 미리 백업하시기 바랍니다."
-        android:textSize="15sp"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
         android:lineSpacingExtra="5dp"
-        android:textColor="@color/font" />
+        android:text="비밀번호 분실 시, 앱을 재설치 해야하며,\n 재설치 후, 모든 일기 내용이 삭제되므로\n 미리 백업하시기 바랍니다."
+        android:textColor="@color/font"
+        android:textSize="15sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:orientation="horizontal"
         android:gravity="center"
+        android:orientation="horizontal"
         android:paddingTop="5dp"
         android:paddingBottom="5dp">
 
@@ -69,6 +65,5 @@
             android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
-
     </LinearLayout>
 </LinearLayout>
