--- a/app/src/main/res/layout/dialog_gps.xml
+++ b/app/src/main/res/layout/dialog_gps.xml
@@ -17,101 +17,78 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:text="백업 하기"
+            android:text="위치 설정"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/cancelButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/circle_view"
-            android:paddingLeft="7dp"
-            android:paddingTop="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="7dp"
+            android:padding="5dp"
             android:scaleType="centerInside"
             android:src="@drawable/x_icon" />
-
     </RelativeLayout>
 
-    <ImageView
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_gravity="center"
-        android:src="@drawable/caution" />
-
     <TextView
-        android:id="@+id/questionTextView"
+        android:id="@+id/deleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginBottom="5dp"
-        android:text="백업하시겠습니까?"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@color/font" />
-
-    <TextView
-        android:id="@+id/subTextView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="3dp"
-        android:gravity="center"
-        android:text="작성한 일기를 구글 드라이브에 저장합니다."
-        android:textSize="15sp"
-        android:textColor="@color/font_contents" />
-
-    <TextView
-        android:id="@+id/subTextView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="(단, 사진은 백업이 불가능합니다.)"
-        android:textSize="12sp"
-        android:textColor="@color/pastel_700" />
+        android:text="위치설정을 허용하시겠습니까?"
+        android:textColor="@color/font"
+        android:textSize="18sp" />
+
+    <CheckBox
+        android:id="@+id/do_not_ask_again_check_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:scaleX="0.8"
+        android:scaleY="0.8"
+        android:text="다시 묻지 않기"
+        android:textColor="@color/font_sub"
+        android:textSize="15sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp">
+        android:orientation="horizontal"
+        android:paddingVertical="15dp">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/cancelButton2"
-            android:layout_width="70dp"
+            android:id="@+id/cancel_button_2"
+            android:layout_width="wrap_content"
             android:layout_height="37dp"
             android:layout_gravity="center"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/button"
-            android:text="취소"
-            android:textStyle="bold"
+            android:text="아니오"
             android:textColor="@color/white"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/okButton"
-            android:layout_width="70dp"
+            android:id="@+id/yes_button"
+            android:layout_width="wrap_content"
             android:layout_height="37dp"
             android:layout_gravity="center"
             android:background="@drawable/button"
-            android:text="백업하기"
-            android:textStyle="bold"
+            android:text="예"
             android:textColor="@color/white"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
     </LinearLayout>
-
 </LinearLayout>
