--- a/app/src/main/res/layout/dialog_search_keyword.xml
+++ b/app/src/main/res/layout/dialog_search_keyword.xml
@@ -20,74 +20,69 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
-
     </RelativeLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="2dp"
+        android:gravity="center"
         android:text="@string/enter_search_keyword"
-        android:textSize="18sp"
-        android:textColor="@color/font" />
+        android:textColor="@color/font"
+        android:textSize="18sp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/within_10_characters"
-        android:textSize="13sp"
-        android:textColor="@color/pastel_700" />
+        android:textColor="@color/pastel_700"
+        android:textSize="13sp" />
 
     <EditText
         android:id="@+id/search_et"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:singleLine="true"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="@color/pastel_700"
         android:maxLength="10"
-        android:textSize="15sp"
+        android:singleLine="true"
         android:textColor="@color/font"
-        android:backgroundTint="@color/pastel_700"/>
+        android:textSize="15sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp">
+        android:orientation="horizontal"
+        android:paddingVertical="15dp">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cancel_btn"
-            android:layout_width="70dp"
+            android:layout_width="wrap_content"
             android:layout_height="37dp"
             android:layout_gravity="center"
             android:background="@drawable/button"
             android:text="@string/cancel"
-            android:textStyle="bold"
             android:textColor="@color/white"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/search_btn"
-            android:layout_width="70dp"
+            android:layout_width="wrap_content"
             android:layout_height="37dp"
             android:layout_gravity="center"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:background="@drawable/button"
             android:text="@string/search"
-            android:textStyle="bold"
             android:textColor="@color/white"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:backgroundTint="@color/cardview_shadow_end_color"
             app:backgroundTintMode="add" />
-
     </LinearLayout>
-
 </LinearLayout>
