--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -9,9 +9,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp">
 
         <TextView
@@ -20,11 +19,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="기분달력"
+            android:text="@string/mood_calendar"
             android:textColor="@color/font"
-            android:textSize="22sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <View
@@ -40,10 +37,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="16dp"
         android:background="@color/background"
-        android:orientation="vertical"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp">
+        android:orientation="vertical">
 
         <com.prolificinteractive.materialcalendarview.MaterialCalendarView
             android:id="@+id/calendar"
@@ -72,18 +68,19 @@
                 android:id="@+id/moodTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:text="화남"
                 android:textColor="@color/red"
                 android:textSize="15sp"
                 android:textStyle="bold" />
-
         </LinearLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingBottom="72dp">
 
             <LinearLayout
                 android:id="@+id/showDiaryStateView"
@@ -103,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="일기가 없습니다.."
+                    android:text="@string/no_diary"
                     android:textColor="@color/gray"
                     android:textSize="14sp" />
 
@@ -116,16 +113,15 @@
                     android:textColor="@color/pastel_700"
                     android:textSize="17sp"
                     android:textStyle="bold" />
-
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clipToPadding="false"
                 android:paddingTop="10dp"
                 android:visibility="gone" />
-
         </FrameLayout>
     </LinearLayout>
 </LinearLayout>
